<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameRegisterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterFragment">

    <EditText
        android:id="@+id/name_text_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/name_placeholder"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/login_text_edit"
        app:layout_constraintEnd_toEndOf="@+id/login_text_edit"
        app:layout_constraintStart_toStartOf="@+id/login_text_edit" />

    <EditText
        android:id="@+id/login_text_edit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/email_placeholder"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_text_edit"
        app:layout_constraintEnd_toEndOf="@+id/password_text_edit"
        app:layout_constraintStart_toStartOf="@+id/password_text_edit" />


    <EditText
        android:id="@+id/password_text_edit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_register_text"
        app:layout_constraintEnd_toEndOf="@+id/password_text_edit"
        app:layout_constraintStart_toStartOf="@+id/password_text_edit"
        app:layout_constraintTop_toBottomOf="@+id/password_text_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>